tests/src/frontend/syntax/invalid/mistake_var.sk
fun main(): String {
  var myint = 10;
}
